--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,16 @@ services:
     image: minio/minio
     volumes:
       - minio_data:/data
+      - ./certs:/root/.minio/certs
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
-    command: server /data --console-address ":9001"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
+    command: server --console-address ":9001" /data
     healthcheck:
-      test: ["CMD-SHELL", "mc alias set myminio http://localhost:9000 minioadmin minioadmin && mc admin info myminio"]
+      test: ["CMD-SHELL", "mc --insecure alias set myminio http://localhost:9000 minioadmin minioadmin && mc --insecure admin info myminio"]
       interval: 30s
       timeout: 20s
       retries: 3
