--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     command: server --console-address ":9001" /data
+    cap_drop:
+      - ALL
+    security_opt:
+      - no-new-privileges:true 
     healthcheck:
       test: ["CMD-SHELL", "mc --insecure alias set myminio http://localhost:9000 minioadmin minioadmin && mc --insecure admin info myminio"]
       interval: 30s
