feat: docker compose setup enhanced

--- a/CloudAdvanced/values.yaml
+++ b/CloudAdvanced/values.yaml
@@ -293,7 +293,9 @@ tenant:
   # - Specify ``console: true`` to expose the Console.
   #
   # Both fields default to ``false``.
-  exposeServices: { }
+  exposeServices:
+    minio: true
+    console: false
   ###
   # The `Kubernetes Service Account <https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/>`__ associated with the Tenant.
   serviceAccountName: ""
@@ -444,7 +446,7 @@ tenant:
 # Set the keys to conform to the Ingress controller and configuration of your choice.
 ingress:
   api:
-    enabled: true
+    enabled: false
     ingressClassName: ""
     labels: { }
     annotations: { }
