--- a/CloudBasic/docker-compose.yml
+++ b/CloudBasic/docker-compose.yml
@@ -1,18 +1,35 @@
-version: '3.7'
+version: '2.4'
 
 services:
-  minio:
-    image: minio/minio
+
+  minio-init:
+    image: alpine:latest
+    user: "root"
     volumes:
       - minio_data:/data
-      - ./certs:/root/.minio/certs
+      - ./certs:/tmp/certs
+    command: >
+      sh -c "cp -R /tmp/certs /data && chown -R 1000:1000 /data && exit 0"
+    networks:
+      - app-network
+      
+  minio:
+    image: minio/minio
+    mem_limit: 1024M
+    cpus: "1"
+    volumes:
+      - minio_data:/data
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
-    command: server --console-address ":9001" /data
+      MINIO_SERVER_URL: "https://easyminiostorage.corp.company.it"
+    command: server --console-address ":9001" /data --certs-dir /data/certs
+    user: "1000:1000"
+    networks:
+      - app-network
     cap_drop:
       - ALL
     security_opt:
@@ -22,6 +39,23 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    depends_on:
+      - minio-init
+      
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - app-network
+    depends_on:
+      - minio
 
 volumes:
   minio_data:
+
+networks:
+  app-network:
+    driver: bridge
