--- a/CloudBasic/docker-compose.yml
+++ b/CloudBasic/docker-compose.yml
@@ -21,12 +21,13 @@ services:
       - minio_data:/data
     ports:
       - "9000:9000"
-      - "9001:9001"
+      - "443:443"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
       MINIO_SERVER_URL: "https://easyminiostorage.corp.company.it"
-    command: server --console-address ":9001" /data --certs-dir /data/certs
+      MINIO_PROMETHEUS_AUTH_TYPE: public
+    command: server --console-address ":443" /data --certs-dir /data/certs
     user: "1000:1000"
     networks:
       - app-network
@@ -35,7 +36,7 @@ services:
     security_opt:
       - no-new-privileges:true 
     healthcheck:
-      test: ["CMD-SHELL", "mc --insecure alias set myminio http://localhost:9000 minioadmin minioadmin && mc --insecure admin info myminio"]
+      test: ["CMD-SHELL", "mc --insecure alias set myminio https://localhost:9000 minioadmin minioadmin && mc --insecure admin info myminio"]
       interval: 30s
       timeout: 20s
       retries: 3
