--- a/CloudBasic/prometheus.yml
+++ b/CloudBasic/prometheus.yml
@@ -2,7 +2,10 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'minio'
-    static_configs:
-      - targets: ['minio:9000']
-
+- job_name: minio-job
+  metrics_path: /minio/v2/metrics/cluster
+  scheme: https
+  static_configs:
+  - targets: ['minio:9000']
+  tls_config:
+    insecure_skip_verify: true
